# Jetson_Balancing_Robot

./: .gitignore  README.md
CAD/: base_frame.stl  camera_lcd_hub.stl  cube_frame.stl  dist_sens_hub.stl  plate.stl  rp2040_hub.stl  wheel_hub.stl
RobotApp/: README.md  app.py  robot.py
images/: scheme.drawio
nvidiaJetson_app/: CMakeLists.txt  README.md  connect_WiFi.sh  main.cpp  uart.cpp  uart.hpp
